<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_attach"
        android:orderInCategory="1"
        android:icon="@drawable/ic_attachment_white"
        android:title="@string/str_menu_action_01"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:orderInCategory="1"
        android:icon="@drawable/ic_send_white"
        android:title="@string/str_menu_action_02"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_opt_01"
        android:orderInCategory="1"
        android:title="@string/str_menu_action_03"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_opt_02"
        android:orderInCategory="1"
        android:title="@string/str_menu_action_04"
        app:showAsAction="never" />
</menu>